Simplify file manager and remove unused syncserver